# trading-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  agent.py  async_portfolio.py  backtest.py  benchmark.py  compare.py  config.py  critic.py  docker-compose.yml  portfolio.py  pyproject.toml  requirements.txt  watchlist.py
.github/workflows/: test.yml
api/: __init__.py  app.py  middleware.py  models.py
evals/: dataset.json  run_evals.py  test_scorers.py
prompts/: compare.py  critic.py  earnings_preview.py  sector.py  system.py
tests/: test_alerts.py  test_api.py  test_backtest.py  test_cache.py  test_calculator.py  test_calendar.py  test_critic.py  test_fundamentals.py  test_macro.py  test_news.py  test_options.py  test_risk.py  test_sentiment.py  test_technicals.py  test_validator.py  test_watchlist.py
tools/: alerts.py  cache.py  calculator.py  calendar.py  earnings.py  fundamentals.py  macro.py  news.py  options.py  risk.py  search.py  sentiment.py  technicals.py  validator.py
