[project]
name = "trading-agent"
version = "0.6.0"
description = "Agentic trading research pipeline using Anthropic tool use"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.50",
    "ddgs>=0.1.0",
    "braintrust>=0.0.150",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pytest>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
trading-agent = "agent:main"

[tool.ruff]
line-length = 100
